--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
+        		<li><a href="/">Research</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="/cv">Contact</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Tanvir Ahmed!</h1>
+        		<h1>Tanvir Ahmed!</h1>
+        		<h1>Researcher @ Hara Lab</h1>
+        		<h1>Tokyo Institute of Technology</h1>
+        		<h1>tanvira@cad.ce.titech.ac.jp</h1>
 				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
