summary is added

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Tanvir Ahmed!</h1>
-        		<h2>Researcher @ Hara Lab</h2>
-        		<h2>Tokyo Institute of Technology</h2>
-        		<h3>tanvira@cad.ce.titech.ac.jp</h3>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Tanvir Ahmed</h1>
+        		<h2>Researcher @ Hara Lab, Tokyo Institute of Technology</h2>
+			<h3>tanvira@cad.ce.titech.ac.jp</h3>
+			<p>My research interest lie in the broad areas of computer architectrue and embedded system, with perticular focus on the development of accelerator and small scale processor for next generation application, with the consideration of reliability, power, and computation efficiency. The various topics I am interested in include (but not limited to) fault tolerance, power and perforance aware accelerator, embedded system design, worst-case delay optimizationin circuit, architectrue, and software level, as well as scheduling and resource management.</p>
+			<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
