--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         		<li><a href="/">Home</a></li>
         		<li><a href="/">Research</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/cv">Contact</a></li>
+        		<li><a href="/">Contact</a></li>
     		</ul>
 		</nav>
 		<div class="container">
