--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-        		<li><a href="/">Research</a></li>
-        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/index.html">Home</a></li>
+        		<li><a href="/index.html">Research</a></li>
+        		<li><a href="/cv.html">CV</a></li>
         		<li><a href="/">Contact</a></li>
     		</ul>
 		</nav>
