--- a/cv.html
+++ b/cv.html
@@ -7,6 +7,26 @@
 	
 	
 	</head>
+	<body>
+		<nav>
+		<ul>
+        		<li><a href="/index.html">Home</a></li>
+        		<li><a href="/index.html">Research</a></li>
+        		<li><a href="/cv.html">CV</a></li>
+        		<li><a href="/">Contact</a></li>
+		</ul>
+		</nav>
+		<div class="container">
+		<div class="blurb">
+        		<h1>Tanvir Ahmed</h1>
+        		<h2>Researcher @ Hara Lab, Tokyo Institute of Technology</h2>
+			<h3>tanvira@cad.ce.titech.ac.jp</h3>
+
+		</div>
+		</div>
+	
+	
+	</body>
 
 
 </html>
