--- a/cv.html
+++ b/cv.html
@@ -22,6 +22,13 @@
         		<h2>Researcher @ Hara Lab, Tokyo Institute of Technology</h2>
 			<h3>tanvira@cad.ce.titech.ac.jp</h3>
 
+
+			<p></p>
+			<h2>Education</h2>
+			<h2>Experience</h2>
+			<h2>Honors</h2>
+			<h2>Service</h2>
+
 		</div>
 		</div>
 	
