education is updated

--- a/cv.html
+++ b/cv.html
@@ -25,6 +25,13 @@
 
 			<p></p>
 			<h2>Education</h2>
+			<p>Nara Institute of Science and Technology</p>
+			<p>Ph.D in Information Science</p>
+			<p>Supervisor: Prof. Yasuhiko Nakashima</p>
+			<p></p>
+			<p>Linkoping University</p>
+			<p>M.Sc. in Electrical Engineering</p>
+			<p>Supervisor: Prof. Oscar Gustafsson</p>
 			<h2>Experience</h2>
 			<h2>Honors</h2>
 			<h2>Service</h2>
