--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 		<nav>
     		<ul>
         		<li><a href="/index.html">Home</a></li>
-        		<li><a href="/index.html">Research</a></li>
+        		<li><a href="/research.html">Research</a></li>
         		<li><a href="/cv.html">CV</a></li>
-        		<li><a href="/">Contact</a></li>
+        		<li><a href="/contact.html">Contact</a></li>
     		</ul>
 		</nav>
 		<div class="container">
