education is updated and framework is added for employment

--- a/cv.html
+++ b/cv.html
@@ -25,14 +25,20 @@
 
 			<p></p>
 			<h2>Education</h2>
-			<p>Nara Institute of Science and Technology</p>
+			<h3>Nara Institute of Science and Technology</h3>
 			<p>Ph.D in Information Science</p>
+			<p>2012-2014</p>
 			<p>Supervisor: Prof. Yasuhiko Nakashima</p>
-			<p></p>
-			<p>Linkoping University</p>
+			<p>Thesis: Techniques to Reduce Overhead and to Improve the Robustness in a Fault Tolerable Reconfigurable Architecture</p>
+			<h3>Linkoping University</h3>
 			<p>M.Sc. in Electrical Engineering</p>
+			<p>2009-2011</p>
 			<p>Supervisor: Prof. Oscar Gustafsson</p>
+			<p>Thesis: High Level Model of IEEE 802.15.3c Standard and Implementation of a Suitable FFT on ASIC</p>
 			<h2>Experience</h2>
+			<h3>Tokyo Institute of Technology</h3>
+			<h3>Nara Institute of Science and Technology</h3>
+			<h3>Linkoping University</h3>
 			<h2>Honors</h2>
 			<h2>Service</h2>
 
