new entry is added

--- a/cv.html
+++ b/cv.html
@@ -37,10 +37,30 @@
 			<p>Thesis: High Level Model of IEEE 802.15.3c Standard and Implementation of a Suitable FFT on ASIC</p>
 			<h2>Experience</h2>
 			<h3>Tokyo Institute of Technology</h3>
+			<p>Researcher, Dept. of Communications and Computer Engineering</p>
+			<p>Apr. 2014-Till Date</p>
+			<p>Work on two different research direction: (1) design and implementation of energy efficient and low cost embedded processor. The processor is described in C language, which cab be synthesized by any commercial or open-source HLS tools. I explore efficient C coding style to produce small and energy efficient circuits. In addition to that different architectural techniques are also taken into for smaller and low power design; (2) investigating efficient hardware and software techniques to detect and recover both permanent and timing faults. These techniques covers a wide range of processor architectrues such as small scale embedded processor, high-end commercial processor, and reconfigurable processor.</p>
 			<h3>Nara Institute of Science and Technology</h3>
+			<p>Research Assitant, Graduate School of Information Science</p>
+			<p>Jun. 2011 - Mar. 2014</p>
+			<p>I had worked on to reduce the hardware overhead to detect permanent fault in a fault-tolerable reconfigurable architectrue. In addition to detecting the permanent fault, I explored an efficient technique to predict transient fault rate, while the processor was operating with minimal redundancy. Based on the predicted error rate future redundancy was selected</p>
 			<h3>Linkoping University</h3>
-			<h2>Honors</h2>
+			<p>Master Thesis Student, Dept. of Electrical Engineering</p>
+			<p>Oct. 2010 - May 2011</p>
+			<p>Worked on implementing a high-throughput and low power FFT processors on ASIC for wireless communication applications. Different optimization techniques (both architectural and implementation) have been applied to meet the timing and power constraints</p>
 			<h2>Service</h2>
+			<h3>Technical Program Committee Member</h3>
+			<p>3rd International Conferecne on Advances in Electrical Engineering (ICAEE)</p>
+			<p>25th International Conference on Field Programmmable Logic (FPL)</p>
+			<h3>Reviewer</h3>
+			<p>Journal</p>
+			<p>ACM Transaction of Embedded Computing Systems</p>
+			<p>IEICE Transaction on Fundamentals</p>
+			<p>Conference</p>
+			<p>2016 Design Automation and Test in Europe (DATE)</p>
+			<p>26th IEEE International Conference on Application-Specific systems, Architectures and Processors (ASAP)</p>
+			<p>2015 International Symposium on VLSI Design, Automation and Test (VLSI-DAT)</p>
+			<p>2014 IEEE Asia Pacific Conference on Circuits and Systems (APCCAS)</p>
 
 		</div>
 		</div>
