--- a/cv.html
+++ b/cv.html
@@ -50,23 +50,27 @@
 			<p>Worked on implementing a high-throughput and low power FFT processors on ASIC for wireless communication applications. Different optimization techniques (both architectural and implementation) have been applied to meet the timing and power constraints</p>
 			<h2>Service</h2>
 			<h3>Technical Program Committee Member</h3>
-			<ol type="1">
+			<ul style="list-style-type:square">
 				<li>3rd International Conferecne on Advances in Electrical Engineering (ICAEE)</li>
 				<li>25th International Conference on Field Programmmable Logic (FPL)</li>
-			</ol>
+			</ul>
 
 
 
 
 			<h3>Reviewer</h3>
 			<p>Journal</p>
-			<p>ACM Transaction of Embedded Computing Systems</p>
-			<p>IEICE Transaction on Fundamentals</p>
+			<ul style="list-style-type:square">
+				<li>ACM Transaction of Embedded Computing Systems</li>
+				<li>IEICE Transaction on Fundamentals</li>
+			</ul>
 			<p>Conference</p>
-			<p>2016 Design Automation and Test in Europe (DATE)</p>
-			<p>26th IEEE International Conference on Application-Specific systems, Architectures and Processors (ASAP)</p>
-			<p>2015 International Symposium on VLSI Design, Automation and Test (VLSI-DAT)</p>
-			<p>2014 IEEE Asia Pacific Conference on Circuits and Systems (APCCAS)</p>
+			<ul style="list-style-type:square">
+				<li>2016 Design Automation and Test in Europe (DATE)</li>
+				<li>26th IEEE International Conference on Application-Specific systems, Architectures and Processors (ASAP)</li>
+				<li>2015 International Symposium on VLSI Design, Automation and Test (VLSI-DAT)</li>
+				<li>2014 IEEE Asia Pacific Conference on Circuits and Systems (APCCAS)</li>
+			</ul>
 
 		</div>
 		</div>
