line break is added

--- a/cv.html
+++ b/cv.html
@@ -26,10 +26,9 @@
 			<p></p>
 			<h2>Education</h2>
 			<h3>Nara Institute of Science and Technology</h3>
-			<p>Ph.D in Information Science</p>
-			<p>2012-2014</p>
-			<p>Supervisor: Prof. Yasuhiko Nakashima</p>
-			<p>Thesis: Techniques to Reduce Overhead and to Improve the Robustness in a Fault Tolerable Reconfigurable Architecture</p>
+			<p>Ph.D in Information Science (2012-2014)<br>
+			Supervisor: Prof. Yasuhiko Nakashima<br>
+			Thesis: Techniques to Reduce Overhead and to Improve the Robustness in a Fault Tolerable Reconfigurable Architecture</p>
 			<h3>Linkoping University</h3>
 			<p>M.Sc. in Electrical Engineering</p>
 			<p>2009-2011</p>
