swedish o is added

--- a/cv.html
+++ b/cv.html
@@ -29,7 +29,7 @@
 			<p>Ph.D in Information Science (2012-2014)<br>
 			Supervisor: Prof. Yasuhiko Nakashima<br>
 			Thesis: Techniques to Reduce Overhead and to Improve the Robustness in a Fault Tolerable Reconfigurable Architecture</p>
-			<h3>Linkoping University</h3>
+			<h3>Link&oumlping University</h3>
 			<p>M.Sc. in Electrical Engineering (2009-2011) <br>
 			Supervisor: Prof. Oscar Gustafsson<br>
 			Thesis: High Level Model of IEEE 802.15.3c Standard and Implementation of a Suitable FFT on ASIC</p>
