--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         		<h1>Tanvir Ahmed</h1>
         		<h2>Researcher @ Hara Lab, Tokyo Institute of Technology</h2>
 			<h3>tanvira@cad.ce.titech.ac.jp</h3>
-			<p>My research interest lie in the broad areas of computer architectrue and embedded system, with perticular focus on the development of accelerator and small scale processor for next generation application, with the consideration of reliability, power, and computation efficiency. The various topics I am interested in include (but not limited to) fault tolerance, power and perforance aware accelerator, embedded system design, worst-case delay optimizationin circuit, architectrue, and software level, as well as scheduling and resource management.</p>
+			<p>My research interest lie in the broad areas of computer architectrue and embedded system, with perticular focus on the development of accelerator and small scale processor for next generation application, with the consideration of reliability, power, and computation efficiency. The various topics I am interested in include (but not limited to) fault tolerance, power and perforance aware accelerator, embedded system design, worst-case delay optimization in circuit, architectrue, and software level, as well as scheduling and resource management.</p>
+			<p>I am a researcher in the Hara Lab at Tokyo Institute of Technology. I graduated from Nara Institute of Technology in March 2014. Before that, I was at Link&oumpping University for M.Sc. study. Here is my CV.
+			</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
