--- a/cv.html
+++ b/cv.html
@@ -33,7 +33,7 @@
 			<p>M.Sc. in Electrical Engineering (2009-2011) <br>
 			Supervisor: Prof. Oscar Gustafsson<br>
 			Thesis: High Level Model of IEEE 802.15.3c Standard and Implementation of a Suitable FFT on ASIC</p>
-			<h2>Experience</h2>
+			<h2>Employment</h2>
 			<h3>Tokyo Institute of Technology</h3>
 			<p>Researcher, Dept. of Communications and Computer Engineering (Apr. 2014-Till Date) <br>
 			Work on two different research direction: (1) design and implementation of energy efficient and low cost embedded processor. The processor is described in C language, which cab be synthesized by any commercial or open-source HLS tools. I explore efficient C coding style to produce small and energy efficient circuits. In addition to that different architectural techniques are also taken into for smaller and low power design; (2) investigating efficient hardware and software techniques to detect and recover both permanent and timing faults. These techniques covers a wide range of processor architectrues such as small scale embedded processor, high-end commercial processor, and reconfigurable processor.</p>
@@ -43,6 +43,8 @@
 			<h3>Linkoping University</h3>
 			<p>Master Thesis Student, Dept. of Electrical Engineering (Oct. 2010 - May 2011)<br>
 			Worked on implementing a high-throughput and low power FFT processors on ASIC for wireless communication applications. Different optimization techniques (both architectural and implementation) have been applied to meet the timing and power constraints</p>
+			<h2>Publication</h2>
+			<p>List of publication can be found <a href="/publication.html">here</a></p>
 			<h2>Service</h2>
 			<h3>Technical Program Committee Member</h3>
 			<ul style="list-style-type:square">
