new publications added

--- a/publication.html
+++ b/publication.html
@@ -22,8 +22,14 @@
 			<h3>Journals</h3>
 			<ol>
 				<li>T. Ahmed, J. Yao, and Y. Nakashima, "A Two-Order Increase in Robustness of Partial Redundancy under a Radiation Stress Test by Using SDC Prediction", IEEE Transaction on Nuclear Science, Vol. 61, Issue 4, pp 1567 - 1574, Aug. 2014.</li>
+				<li>T. Ahmed, J. Yao, Y. Hara-Azumi, S. Yamashita, and Y. Nakashima, "Selective Check of Data-Path for Effective Fault Tolerance", IEICE Transaction of Information and Systems (Special Section on Reconfigurable Systems), Vol, E96-D, No. 8, pp. 1592 - 1601, Aug. 2013.</li>
 			</ol>
 			<h3>Conferences (Peer Reviewed)</h3>
+			<ol>
+				<li>T. Ahmed, N. Sakamoto, J. Anderson, and Y. Hara-Azumi, "Synthesizable-from-C Embedded Processor Based on MIPS-ISA and OISC", IEEE/IFIP International Conference on Embedded and Ubiquitous Computing (EUC), pp. 114 - 123, Proto, Portugal, Oct. 2015.</li>
+				<li>Y. Hara-Azumi, T. Ahmed, T. Azumi, and N. D. Dutt, "Instruction-Set Extension of Embedded Microprocessor for Timing Speculation", International Conference on Integrated Circuits, Design, and Verification (ICDV), pp. 67 - 72, Ho chi Minh City, Vietnam, Aug. 2015.</li>
+				<li>T. Ahmed, and Y. Hara-Azumi, "Timing Speculation-Aware Instruction Set Extension for Resource Constrained Embedded Systems", IEEE International Conference on Application-specific Systems, Architectures, and Processors (ASAP), pp. 30 - 34, Toronto, Canada, Jul. 2015.</li>
+			</ol>
 			<h3>Conferences (Not-Peer Reviewed)</h3>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
