conference is finished

--- a/publication.html
+++ b/publication.html
@@ -29,6 +29,10 @@
 				<li>T. Ahmed, N. Sakamoto, J. Anderson, and Y. Hara-Azumi, "Synthesizable-from-C Embedded Processor Based on MIPS-ISA and OISC", IEEE/IFIP International Conference on Embedded and Ubiquitous Computing (EUC), pp. 114 - 123, Proto, Portugal, Oct. 2015.</li>
 				<li>Y. Hara-Azumi, T. Ahmed, T. Azumi, and N. D. Dutt, "Instruction-Set Extension of Embedded Microprocessor for Timing Speculation", International Conference on Integrated Circuits, Design, and Verification (ICDV), pp. 67 - 72, Ho chi Minh City, Vietnam, Aug. 2015.</li>
 				<li>T. Ahmed, and Y. Hara-Azumi, "Timing Speculation-Aware Instruction Set Extension for Resource Constrained Embedded Systems", IEEE International Conference on Application-specific Systems, Architectures, and Processors (ASAP), pp. 30 - 34, Toronto, Canada, Jul. 2015.</li>
+				<li>T. Ahmed, J. Yao, and Y. Nakashima, "A Two-Order Increase in Robustness of Partial Redundancy under Radiation Stress Test by Using SDC Prediction", European Conference on Radiation and Its Effects on Components and Systems (RADECS), pp. 1 - 8, Oxford, UK, Sep. 2013.</li>
+				<li>T. Ahmed, "A Low-Power Time-Interleaved 128-Point FFT for IEEE 802.15.3c Standard", International Conference on Informatics, Electronics, & Vision (ICIEV), pp. 1 - 5, Dhaka, Bangladesh, May. 2013.</li>
+				<li>T. Ahmed, J. Yao, and Y. Nakashima, "Introducing OVP Awareness to Achieve Efficient Permanent Defect Locating", IEEE/ACM Symposium on Nanoscale Architecture (NANOARCH), pp. 43 - 49, Amsterdam, The Netherlands, Jul. 2012.</li>
+				<li>T. Ahmed, M. Garrido, and O. Gustafsson, "A 512-Point Pipelined Feedforward FFT for WPAN Application", Asilomar Conference on Signals, Systems, and Computers (ASILOMAR), pp. 981 - 984, Pacific Grove, CA, Nov. 2011.</li>
 			</ol>
 			<h3>Conferences (Not-Peer Reviewed)</h3>
     		</div><!-- /.blurb -->
