non peer reviewed is updated partially

--- a/publication.html
+++ b/publication.html
@@ -35,6 +35,10 @@
 				<li>T. Ahmed, M. Garrido, and O. Gustafsson, "A 512-Point Pipelined Feedforward FFT for WPAN Application", Asilomar Conference on Signals, Systems, and Computers (ASILOMAR), pp. 981 - 984, Pacific Grove, CA, Nov. 2011.</li>
 			</ol>
 			<h3>Conferences (Not-Peer Reviewed)</h3>
+			<ol>
+				<li>N. Sakamoto, T. Ahmed, J. Anderson, and Y. Hara-Azumi, "Extension of One-Instruction-Set Computer and Its Evaluation", IEICE Technical Report, Vol. 115, No. 88, VLD2015-11, pp. 19 - 24, Jun. 2015.</li>
+				<li>S. Sugiyama, T. Ahmed, and Y. Hara-Azumi, "Implementation and Evaluation of Architecture using Lookup Table for Approximate Computing", IEICE Technical Report, Vol. 114, No. 476, VLD2014-183, pp. 171 - 176, Mar. 2015.</li>
+			</ol>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
