conference names are italicked

--- a/publication.html
+++ b/publication.html
@@ -21,23 +21,23 @@
 			<h3>tanvira@cad.ce.titech.ac.jp</h3>
 			<h3>Journals</h3>
 			<ol>
-				<li><ins>T. Ahmed</ins>, J. Yao, and Y. Nakashima, "<b>A Two-Order Increase in Robustness of Partial Redundancy under a Radiation Stress Test by Using SDC Prediction</b>", IEEE Transaction on Nuclear Science, Vol. 61, Issue 4, pp 1567 - 1574, Aug. 2014.</li>
-				<li><ins>T. Ahmed</ins>, J. Yao, Y. Hara-Azumi, S. Yamashita, and Y. Nakashima, "<b>Selective Check of Data-Path for Effective Fault Tolerance</b>", IEICE Transaction of Information and Systems (Special Section on Reconfigurable Systems), Vol, E96-D, No. 8, pp. 1592 - 1601, Aug. 2013.</li>
+				<li><ins>T. Ahmed</ins>, J. Yao, and Y. Nakashima, "<b>A Two-Order Increase in Robustness of Partial Redundancy under a Radiation Stress Test by Using SDC Prediction</b>", <i>IEEE Transaction on Nuclear Science</i>, Vol. 61, Issue 4, pp 1567 - 1574, Aug. 2014.</li>
+				<li><ins>T. Ahmed</ins>, J. Yao, Y. Hara-Azumi, S. Yamashita, and Y. Nakashima, "<b>Selective Check of Data-Path for Effective Fault Tolerance</b>", <i>IEICE Transaction of Information and Systems (Special Section on Reconfigurable Systems)</i>, Vol, E96-D, No. 8, pp. 1592 - 1601, Aug. 2013.</li>
 			</ol>
 			<h3>Conferences (Peer Reviewed)</h3>
 			<ol>
-				<li><ins>T. Ahmed</ins>, N. Sakamoto, J. Anderson, and Y. Hara-Azumi, "<b>Synthesizable-from-C Embedded Processor Based on MIPS-ISA and OISC</b>", IEEE/IFIP International Conference on Embedded and Ubiquitous Computing (EUC), pp. 114 - 123, Proto, Portugal, Oct. 2015.</li>
-				<li>Y. Hara-Azumi, <ins>T. Ahmed</ins>, T. Azumi, and N. D. Dutt, "<b>Instruction-Set Extension of Embedded Microprocessor for Timing Speculation</b>", International Conference on Integrated Circuits, Design, and Verification (ICDV), pp. 67 - 72, Ho chi Minh City, Vietnam, Aug. 2015.</li>
-				<li><ins>T. Ahmed</ins>, and Y. Hara-Azumi, "<b>Timing Speculation-Aware Instruction Set Extension for Resource Constrained Embedded Systems</b>", IEEE International Conference on Application-specific Systems, Architectures, and Processors (ASAP), pp. 30 - 34, Toronto, Canada, Jul. 2015.</li>
-				<li><ins>T. Ahmed</ins>, J. Yao, and Y. Nakashima, "<b>A Two-Order Increase in Robustness of Partial Redundancy under Radiation Stress Test by Using SDC Prediction</b>", European Conference on Radiation and Its Effects on Components and Systems (RADECS), pp. 1 - 8, Oxford, UK, Sep. 2013.</li>
-				<li><ins>T. Ahmed</ins>, "<b>A Low-Power Time-Interleaved 128-Point FFT for IEEE 802.15.3c Standard</b>", International Conference on Informatics, Electronics, & Vision (ICIEV), pp. 1 - 5, Dhaka, Bangladesh, May. 2013.</li>
-				<li><ins>T. Ahmed</ins>, J. Yao, and Y. Nakashima, "<b>Introducing OVP Awareness to Achieve Efficient Permanent Defect Locating</b>", IEEE/ACM Symposium on Nanoscale Architecture (NANOARCH), pp. 43 - 49, Amsterdam, The Netherlands, Jul. 2012.</li>
-				<li><ins>T. Ahmed</ins>, M. Garrido, and O. Gustafsson, "<b>A 512-Point Pipelined Feedforward FFT for WPAN Application</b>", Asilomar Conference on Signals, Systems, and Computers (ASILOMAR), pp. 981 - 984, Pacific Grove, CA, Nov. 2011.</li>
+				<li><ins>T. Ahmed</ins>, N. Sakamoto, J. Anderson, and Y. Hara-Azumi, "<b>Synthesizable-from-C Embedded Processor Based on MIPS-ISA and OISC</b>", <i>IEEE/IFIP International Conference on Embedded and Ubiquitous Computing (EUC)</i>, pp. 114 - 123, Proto, Portugal, Oct. 2015.</li>
+				<li>Y. Hara-Azumi, <ins>T. Ahmed</ins>, T. Azumi, and N. D. Dutt, "<b>Instruction-Set Extension of Embedded Microprocessor for Timing Speculation</b>", <i>International Conference on Integrated Circuits, Design, and Verification (ICDV)</i>, pp. 67 - 72, Ho chi Minh City, Vietnam, Aug. 2015.</li>
+				<li><ins>T. Ahmed</ins>, and Y. Hara-Azumi, "<b>Timing Speculation-Aware Instruction Set Extension for Resource Constrained Embedded Systems</b>", <i>IEEE International Conference on Application-specific Systems, Architectures, and Processors (ASAP)</i>, pp. 30 - 34, Toronto, Canada, Jul. 2015.</li>
+				<li><ins>T. Ahmed</ins>, J. Yao, and Y. Nakashima, "<b>A Two-Order Increase in Robustness of Partial Redundancy under Radiation Stress Test by Using SDC Prediction</b>", <i>European Conference on Radiation and Its Effects on Components and Systems (RADECS)</i>, pp. 1 - 8, Oxford, UK, Sep. 2013.</li>
+				<li><ins>T. Ahmed</ins>, "<b>A Low-Power Time-Interleaved 128-Point FFT for IEEE 802.15.3c Standard</b>", <i>International Conference on Informatics, Electronics, & Vision (ICIEV)</i>, pp. 1 - 5, Dhaka, Bangladesh, May. 2013.</li>
+				<li><ins>T. Ahmed</ins>, J. Yao, and Y. Nakashima, "<b>Introducing OVP Awareness to Achieve Efficient Permanent Defect Locating</b>", <i>IEEE/ACM Symposium on Nanoscale Architecture (NANOARCH)</i>, pp. 43 - 49, Amsterdam, The Netherlands, Jul. 2012.</li>
+				<li><ins>T. Ahmed</ins>, M. Garrido, and O. Gustafsson, "<b>A 512-Point Pipelined Feedforward FFT for WPAN Application</b>", <i>Asilomar Conference on Signals, Systems, and Computers (ASILOMAR)</i>, pp. 981 - 984, Pacific Grove, CA, Nov. 2011.</li>
 			</ol>
 			<h3>Conferences (Not-Peer Reviewed)</h3>
 			<ol>
-				<li>N. Sakamoto, <ins>T. Ahmed</ins>, J. Anderson, and Y. Hara-Azumi, "<b>Extension of One-Instruction-Set Computer and Its Evaluation</b>", IEICE Technical Report, Vol. 115, No. 88, VLD2015-11, pp. 19 - 24, Jun. 2015.</li>
-				<li>S. Sugiyama, <ins>T. Ahmed</ins>, and Y. Hara-Azumi, "<b>Implementation and Evaluation of Architecture using Lookup Table for Approximate Computing</b>", IEICE Technical Report, Vol. 114, No. 476, VLD2014-183, pp. 171 - 176, Mar. 2015.</li>
+				<li>N. Sakamoto, <ins>T. Ahmed</ins>, J. Anderson, and Y. Hara-Azumi, "<b>Extension of One-Instruction-Set Computer and Its Evaluation</b>", <i>IEICE Technical Report</i>, Vol. 115, No. 88, VLD2015-11, pp. 19 - 24, Jun. 2015.</li>
+				<li>S. Sugiyama, <ins>T. Ahmed</ins>, and Y. Hara-Azumi, "<b>Implementation and Evaluation of Architecture using Lookup Table for Approximate Computing</b>", <i>IEICE Technical Report</i>, Vol. 114, No. 476, VLD2014-183, pp. 171 - 176, Mar. 2015.</li>
 			</ol>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
