--- a/publication.html
+++ b/publication.html
@@ -38,6 +38,9 @@
 			<ol>
 				<li>N. Sakamoto, <ins>T. Ahmed</ins>, J. Anderson, and Y. Hara-Azumi, "<b>Extension of One-Instruction-Set Computer and Its Evaluation</b>", <i>IEICE Technical Report</i>, Vol. 115, No. 88, VLD2015-11, pp. 19 - 24, Jun. 2015.</li>
 				<li>S. Sugiyama, <ins>T. Ahmed</ins>, and Y. Hara-Azumi, "<b>Implementation and Evaluation of Architecture using Lookup Table for Approximate Computing</b>", <i>IEICE Technical Report</i>, Vol. 114, No. 476, VLD2014-183, pp. 171 - 176, Mar. 2015.</li>
+				<li><ins>T. Ahmed</ins>, J. Yao, and Y. Nakashima, "<b>Achieving Near-Optimial Dependability with Minimal Hardware Costs in an FU Array Processor by Soft Error Rate Monitoring</b>", <i>IIPSJ SIG Notes</i>, 2012-ARC-201(19), pp. 1-6, Aug. 2012.</li>
+				<li>T. Otani, <ins>T. Ahmed</ins>, J. Yao, and Y. Nakashima, "<b>Reducing Redundancy Overhead in a High Dependable FU Array Processor</b>", <i>IPSJ SIC Notes</i>, 2012-ARC-201(19), pp. 1-6, Aug. 2012.</li>
+				<li><ins>T. Ahmed</ins>, J. Yao, and Y. Nakashima, "<b>Achieving Effective Fault Tolerance in FU Array by Adding AVF Awareness</b>", <i>IPSJ SIG Notes</i>, Vol-2012, No-5, pp. 1-6, Mar. 2012.</li>
 			</ol>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
