--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         		<h1>Tanvir Ahmed</h1>
         		<h2>Researcher @ Hara Lab, Tokyo Institute of Technology<br>
 			tanvira@cad.ce.titech.ac.jp</h2>
-		<p>I am a researcher in the <a href="www.cad.ce.titech.ac.jp" target="_blank">Hara Lab</a> at <a href="http://www.titech.ac.jp/english/index.html">Tokyo Institute of Technology</a>. I graduated from <a href="http://www.naist.jp/en/">Nara Institute of Technology</a> in March 2014. Before that, I was at <a href="http://www.liu.se/?l=en">Link&oumlping University</a> for M.Sc. in Electrical Engineering. Here is my <a href="/cv.html">CV</a>.
+		<p>I am a researcher in the <a href="http://www.cad.ce.titech.ac.jp" target="_blank">Hara Lab</a> at <a href="http://www.titech.ac.jp/english/index.html" target="_blank">Tokyo Institute of Technology</a>. I graduated from <a href="http://www.naist.jp/en/" target="_blank">Nara Institute of Technology</a> in March 2014. Before that, I was at <a href="http://www.liu.se/?l=en" target="_blank">Link&oumlping University</a> for M.Sc. in Electrical Engineering. Here is my <a href="/cv.html">CV</a>.
 			</p>
 			<p>My research interest lie in the broad areas of computer architectrue and embedded system, with perticular focus on the development of accelerator and small scale processor for next generation application, with the consideration of reliability, power, and computation efficiency. The various topics I am interested in include (but not limited to) fault tolerance, power and perforance aware accelerator, embedded system design, worst-case delay optimization in circuit, architectrue, and software level, as well as scheduling and resource management. Here is the list of <a href="/publication.html">publication</a></p>
     		</div><!-- /.blurb -->
