--- a/publication.html
+++ b/publication.html
@@ -17,8 +17,8 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Tanvir Ahmed</h1>
-        		<h2>Researcher @ Hara Lab, Tokyo Institute of Technology</h2>
-			<h3>tanvira@cad.ce.titech.ac.jp</h3>
+        		<h2>Researcher @ Hara Lab, Tokyo Institute of Technology<br>
+			tanvira@cad.ce.titech.ac.jp</h2>
 			<h3>Journals</h3>
 			<ol>
 				<li><ins>T. Ahmed</ins>, J. Yao, and Y. Nakashima, "<b>A Two-Order Increase in Robustness of Partial Redundancy under a Radiation Stress Test by Using SDC Prediction</b>", <i>IEEE Transaction on Nuclear Science</i>, Vol. 61, Issue 4, pp 1567 - 1574, Aug. 2014.</li>
