--- a/research.html
+++ b/research.html
@@ -17,8 +17,8 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Tanvir Ahmed</h1>
-        		<h2>Researcher @ Hara Lab, Tokyo Institute of Technology</h2>
-			<h3>tanvira@cad.ce.titech.ac.jp</h3>
+        		<h2>Researcher @ Hara Lab, Tokyo Institute of Technology<br>
+			tanvira@cad.ce.titech.ac.jp</h2>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
