--- a/cv.html
+++ b/cv.html
@@ -25,12 +25,12 @@
 
 			<p></p>
 			<h2>Education</h2>
-			<h3>Nara Institute of Science and Technology</h3>
-			<p>Ph.D in Information Science (2012-2014)<br>
+			<p><b>Nara Institute of Science and Technology</b><br>
+			<b>Ph.D in Information Science (2012-2014)</b><br>
 			Supervisor: Prof. Yasuhiko Nakashima<br>
-			Thesis: Techniques to Reduce Overhead and to Improve the Robustness in a Fault Tolerable Reconfigurable Architecture</p>
-			<h3>Link&oumlping University</h3>
-			<p>M.Sc. in Electrical Engineering (2009-2011) <br>
+			Thesis: Techniques to Reduce Overhead and to Improve the Robustness in a Fault Tolerable Reconfigurable Architecture<br><br>
+			<p><b>Link&oumlping University</b><br>
+			<b>M.Sc. in Electrical Engineering (2009-2011)</b><br>
 			Supervisor: Prof. Oscar Gustafsson<br>
 			Thesis: High Level Model of IEEE 802.15.3c Standard and Implementation of a Suitable FFT on ASIC</p>
 			<h2>Employment</h2>
