--- a/cv.html
+++ b/cv.html
@@ -29,7 +29,7 @@
 			<b>Ph.D in Information Science (2012-2014)</b><br>
 			Supervisor: Prof. Yasuhiko Nakashima<br>
 			Thesis: Techniques to Reduce Overhead and to Improve the Robustness in a Fault Tolerable Reconfigurable Architecture<br><br>
-			<p><b>Link&oumlping University</b><br>
+			<b>Link&oumlping University</b><br>
 			<b>M.Sc. in Electrical Engineering (2009-2011)</b><br>
 			Supervisor: Prof. Oscar Gustafsson<br>
 			Thesis: High Level Model of IEEE 802.15.3c Standard and Implementation of a Suitable FFT on ASIC</p>
