--- a/cv.html
+++ b/cv.html
@@ -25,6 +25,7 @@
 
 			<p></p>
 			<h2>Education</h2>
+			<p>
 				<b>Nara Institute of Science and Technology</b><br>
 				<b>Ph.D in Information Science (2012-2014)</b><br>
 				Supervisor: Prof. Yasuhiko Nakashima<br>
@@ -33,16 +34,19 @@
 				<b>M.Sc. in Electrical Engineering (2009-2011)</b><br>
 				Supervisor: Prof. Oscar Gustafsson<br>
 				Thesis: High Level Model of IEEE 802.15.3c Standard and Implementation of a Suitable FFT on ASIC
+			</p>
 			<h2>Employment</h2>
-			<h3>Tokyo Institute of Technology</h3>
-			<p>Researcher, Dept. of Communications and Computer Engineering (Apr. 2014-Till Date) <br>
-			Work on two different research direction: (1) design and implementation of energy efficient and low cost embedded processor. The processor is described in C language, which cab be synthesized by any commercial or open-source HLS tools. I explore efficient C coding style to produce small and energy efficient circuits. In addition to that different architectural techniques are also taken into for smaller and low power design; (2) investigating efficient hardware and software techniques to detect and recover both permanent and timing faults. These techniques covers a wide range of processor architectrues such as small scale embedded processor, high-end commercial processor, and reconfigurable processor.</p>
-			<h3>Nara Institute of Science and Technology</h3>
-			<p>Research Assitant, Graduate School of Information Science (Jun. 2011 - Mar. 2014)<br>
-			I had worked on to reduce the hardware overhead to detect permanent fault in a fault-tolerable reconfigurable architectrue. In addition to detecting the permanent fault, I explored an efficient technique to predict transient fault rate, while the processor was operating with minimal redundancy. Based on the predicted error rate future redundancy was selected</p>
-			<h3>Linkoping University</h3>
-			<p>Master Thesis Student, Dept. of Electrical Engineering (Oct. 2010 - May 2011)<br>
-			Worked on implementing a high-throughput and low power FFT processors on ASIC for wireless communication applications. Different optimization techniques (both architectural and implementation) have been applied to meet the timing and power constraints</p>
+			<p>
+				<b>Tokyo Institute of Technology</b><br>
+				<b>Researcher, Dept. of Communications and Computer Engineering (Apr. 2014-Till Date)</b><br>
+				Work on two different research direction: (1) design and implementation of energy efficient and low cost embedded processor. The processor is described in C language, which cab be synthesized by any commercial or open-source HLS tools. I explore efficient C coding style to produce small and energy efficient circuits. In addition to that different architectural techniques are also taken into for smaller and low power design; (2) investigating efficient hardware and software techniques to detect and recover both permanent and timing faults. These techniques covers a wide range of processor architectrues such as small scale embedded processor, high-end commercial processor, and reconfigurable processor.<br><br>
+				<b>Nara Institute of Science and Technology</b>
+				<b>Research Assitant, Graduate School of Information Science (Jun. 2011 - Mar. 2014)</b><br>
+				I had worked on to reduce the hardware overhead to detect permanent fault in a fault-tolerable reconfigurable architectrue. In addition to detecting the permanent fault, I explored an efficient technique to predict transient fault rate, while the processor was operating with minimal redundancy. Based on the predicted error rate future redundancy was selected<br><br>
+				<b>Linkoping University</b><br>
+				<b>Master Thesis Student, Dept. of Electrical Engineering (Oct. 2010 - May 2011)</b><br>
+				Worked on implementing a high-throughput and low power FFT processors on ASIC for wireless communication applications. Different optimization techniques (both architectural and implementation) have been applied to meet the timing and power constraints
+			</p>
 			<h2>Publication</h2>
 			<p>List of publication can be found <a href="/publication.html">here</a></p>
 			<h2>Service</h2>
