--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,7 @@
 			<p></p>
 			<h2>Education</h2>
 			<p>
-				<b>Nara Institute of Science and Technology</b><br>
+				<h3>Nara Institute of Science and Technology</h3><br>
 				<b>Ph.D in Information Science (2012-2014)</b><br>
 				Supervisor: Prof. Yasuhiko Nakashima<br>
 				Thesis: Techniques to Reduce Overhead and to Improve the Robustness in a Fault Tolerable Reconfigurable Architecture<br><br>
