fix the misplacement

--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,7 @@
 			<p></p>
 			<h2>Education</h2>
 			<p>
-				<h3>Nara Institute of Science and Technology</h3><br>
+				<b>Nara Institute of Science and Technology</b><br>
 				<b>Ph.D in Information Science (2012-2014)</b><br>
 				Supervisor: Prof. Yasuhiko Nakashima<br>
 				Thesis: Techniques to Reduce Overhead and to Improve the Robustness in a Fault Tolerable Reconfigurable Architecture<br><br>
@@ -40,7 +40,7 @@
 				<b>Tokyo Institute of Technology</b><br>
 				<b>Researcher, Dept. of Communications and Computer Engineering (Apr. 2014-Till Date)</b><br>
 				Work on two different research direction: (1) design and implementation of energy efficient and low cost embedded processor. The processor is described in C language, which cab be synthesized by any commercial or open-source HLS tools. I explore efficient C coding style to produce small and energy efficient circuits. In addition to that different architectural techniques are also taken into for smaller and low power design; (2) investigating efficient hardware and software techniques to detect and recover both permanent and timing faults. These techniques covers a wide range of processor architectrues such as small scale embedded processor, high-end commercial processor, and reconfigurable processor.<br><br>
-				<b>Nara Institute of Science and Technology</b>
+				<b>Nara Institute of Science and Technology</b><br>
 				<b>Research Assitant, Graduate School of Information Science (Jun. 2011 - Mar. 2014)</b><br>
 				I had worked on to reduce the hardware overhead to detect permanent fault in a fault-tolerable reconfigurable architectrue. In addition to detecting the permanent fault, I explored an efficient technique to predict transient fault rate, while the processor was operating with minimal redundancy. Based on the predicted error rate future redundancy was selected<br><br>
 				<b>Linkoping University</b><br>
