--- a/publication.html
+++ b/publication.html
@@ -27,7 +27,7 @@
 			<h3>Conferences (Peer Reviewed)</h3>
 			<ol>
 				<li><ins>T. Ahmed</ins>, N. Sakamoto, J. Anderson, and Y. Hara-Azumi, "<b>Synthesizable-from-C Embedded Processor Based on MIPS-ISA and OISC</b>", <i>IEEE/IFIP International Conference on Embedded and Ubiquitous Computing (EUC)</i>, pp. 114 - 123, Proto, Portugal, Oct. 2015.</li>
-				<li>Y. Hara-Azumi, <ins>T. Ahmed</ins>, T. Azumi, and N. D. Dutt, "<b>Instruction-Set Extension of Embedded Microprocessor for Timing Speculation</b>", <i>International Conference on Integrated Circuits, Design, and Verification (ICDV)</i>, pp. 67 - 72, Ho chi Minh City, Vietnam, Aug. 2015.</li>
+				<li>Y. Hara-Azumi, <ins>T. Ahmed</ins>, T. Azumi, and N. D. Dutt, "<b>Instruction-Set Extension of Embedded Microprocessor for Timing Speculation</b>", <i>International Conference on Integrated Circuits, Design, and Verification (ICDV)</i>, pp. 67 - 72, Ho chi Minh City, Vietnam, Aug. 2015. <b>(Invited Paper)</b></li>
 				<li><ins>T. Ahmed</ins>, and Y. Hara-Azumi, "<b>Timing Speculation-Aware Instruction Set Extension for Resource Constrained Embedded Systems</b>", <i>IEEE International Conference on Application-specific Systems, Architectures, and Processors (ASAP)</i>, pp. 30 - 34, Toronto, Canada, Jul. 2015.</li>
 				<li><ins>T. Ahmed</ins>, J. Yao, and Y. Nakashima, "<b>A Two-Order Increase in Robustness of Partial Redundancy under Radiation Stress Test by Using SDC Prediction</b>", <i>European Conference on Radiation and Its Effects on Components and Systems (RADECS)</i>, pp. 1 - 8, Oxford, UK, Sep. 2013.</li>
 				<li><ins>T. Ahmed</ins>, "<b>A Low-Power Time-Interleaved 128-Point FFT for IEEE 802.15.3c Standard</b>", <i>International Conference on Informatics, Electronics, & Vision (ICIEV)</i>, pp. 1 - 5, Dhaka, Bangladesh, May. 2013.</li>
@@ -36,10 +36,10 @@
 			</ol>
 			<h3>Conferences (Not-Peer Reviewed)</h3>
 			<ol>
-				<li>N. Sakamoto, <ins>T. Ahmed</ins>, J. Anderson, and Y. Hara-Azumi, "<b>Extension of One-Instruction-Set Computer and Its Evaluation</b>", <i>IEICE Technical Report</i>, Vol. 115, No. 88, VLD2015-11, pp. 19 - 24, Jun. 2015.</li>
-				<li>S. Sugiyama, <ins>T. Ahmed</ins>, and Y. Hara-Azumi, "<b>Implementation and Evaluation of Architecture using Lookup Table for Approximate Computing</b>", <i>IEICE Technical Report</i>, Vol. 114, No. 476, VLD2014-183, pp. 171 - 176, Mar. 2015.</li>
+				<li>N. Sakamoto, <ins>T. Ahmed</ins>, J. Anderson, and Y. Hara-Azumi, "<b>Extension of One-Instruction-Set Computer and Its Evaluation</b>", <i>IEICE Technical Report</i>, Vol. 115, No. 88, VLD2015-11, pp. 19 - 24, Jun. 2015. <b>(Japanese)</b></li>
+				<li>S. Sugiyama, <ins>T. Ahmed</ins>, and Y. Hara-Azumi, "<b>Implementation and Evaluation of Architecture using Lookup Table for Approximate Computing</b>", <i>IEICE Technical Report</i>, Vol. 114, No. 476, VLD2014-183, pp. 171 - 176, Mar. 2015. <b>(Japanese)</b></li>
 				<li><ins>T. Ahmed</ins>, J. Yao, and Y. Nakashima, "<b>Achieving Near-Optimial Dependability with Minimal Hardware Costs in an FU Array Processor by Soft Error Rate Monitoring</b>", <i>IIPSJ SIG Notes</i>, 2012-ARC-201(19), pp. 1-6, Aug. 2012.</li>
-				<li>T. Otani, <ins>T. Ahmed</ins>, J. Yao, and Y. Nakashima, "<b>Reducing Redundancy Overhead in a High Dependable FU Array Processor</b>", <i>IPSJ SIC Notes</i>, 2012-ARC-201(19), pp. 1-6, Aug. 2012.</li>
+				<li>T. Otani, <ins>T. Ahmed</ins>, J. Yao, and Y. Nakashima, "<b>Reducing Redundancy Overhead in a High Dependable FU Array Processor</b>", <i>IPSJ SIC Notes</i>, 2012-ARC-201(19), pp. 1-6, Aug. 2012. <b>(Japanese)</b></li>
 				<li><ins>T. Ahmed</ins>, J. Yao, and Y. Nakashima, "<b>Achieving Effective Fault Tolerance in FU Array by Adding AVF Awareness</b>", <i>IPSJ SIG Notes</i>, Vol-2012, No-5, pp. 1-6, Mar. 2012.</li>
 			</ol>
     		</div><!-- /.blurb -->
