address and phone added

--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,17 @@
         		<h2>Researcher @ Hara Lab, Tokyo Institute of Technology<br>
 			tanvira@cad.ce.titech.ac.jp</h2>
 			<p>
-			Send me email at <a href="mailto:tanvira@cad.ce.titech.ac.jp">tanvira@cad.ce.titech.ac.jp</a> or <a href="mailto:tanvira@ieee.org">tanvira@ieee.org</a>. You can find me in South Building 3 at Tokyo Institute of Technology. I share my projects on <a href="github.com/tanvir-a" target="_blank">GitHub</a>. You can contact me on <a href="https://www.linkedin.com/profile/view?id=AAMAAAdJ7YoBdpGJosSxyztrknE3VQXJ98Oq-WI&trk=hp-identity-name" target="_blank">Linkedin</a> too.
-
+			Send me email at <a href="mailto:tanvira@cad.ce.titech.ac.jp">tanvira@cad.ce.titech.ac.jp</a> or <a href="mailto:tanvira@ieee.org">tanvira@ieee.org</a>. You can find me in South Building 3, room 318 at Tokyo Institute of Technology. I share my projects on <a href="github.com/tanvir-a" target="_blank">GitHub</a>. You can contact me on <a href="https://www.linkedin.com/profile/view?id=AAMAAAdJ7YoBdpGJosSxyztrknE3VQXJ98Oq-WI&trk=hp-identity-name" target="_blank">Linkedin</a> too.
+			</p>
+			<p>
+			<b>Mailing Address:</b><br>
+			S3-50, 2-12-1 Ookayama<br>
+			Meguro-Ku, Tokyo 152-8550<br>
+			Japan
+			</p>
+			<p>
+			<b>Phone/Fax:</b> +81-3-5734-2914</br>
+			<b>Mobile:</b> +81-80-3769-5229</br>
 			</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
