--- a/research.html
+++ b/research.html
@@ -19,17 +19,11 @@
         		<h1>Tanvir Ahmed</h1>
         		<h2>Researcher @ Hara Lab, Tokyo Institute of Technology<br>
 			tanvira@cad.ce.titech.ac.jp</h2>
-		<p><b>Synthesizable-from-C Embedded Processor</b>
+		<p><b>Area and Energy Efficient Embedded Processor</b>
 		</p>
-		<p><b>Fault Tolerable Embedded Processor</b>
+		<p><b>Static Program Analysis for Better Speedup</b>
 		</p>
-		<p><b>Scalable Heterogeneous Multicore Framework</b>
-		</p>
-		<p><b>Automatic Processor Generation Framework: From simulator to RTL</b>
-		</p>
-		<p><b>Effective Permanent Fault Detection in CGRA</b>
-		</p>
-		<p><b>SDC Prediction in a CGRA Architecture</b>
+		<p><b>Fault Tolerable CGRA Architecture</b>
 		</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
