--- a/cv.html
+++ b/cv.html
@@ -75,8 +75,12 @@
 
 		</div>
 		</div>
-	
-	
+		<footer>
+    		<ul>
+        		<li><a href="mailto:tanvira@cad.ce.titech.ac.jp">email</a></li>
+        		<li><a href="https://github.com/tanvir-a">github.com/tanvir-a</a></li>
+			</ul>
+		</footer>
 	</body>
 
 
