research is updated

--- a/research.html
+++ b/research.html
@@ -21,6 +21,8 @@
 			tanvira@cad.ce.titech.ac.jp</h2>
 		<p><b>Area and Energy Efficient Embedded Processor</b>
 		</p>
+		<p>The goal of this research is to design a embedded processor to meet several constraints such as circuit area, power, and energy. Recently, we developed a framework to generate application specific embedded processor while area, power, and performance can be traded-off. The framework consists of a non-pipelined host processor, and a one instruction set co-processor. The host processor can be customize for any application while the co-processor supports other instructions of the of the ISA. While more and more instructions are off-loaded to the co-processor the size of the hsot-processor will be shrinking. As a result, the processor designer can manage the performance of the processor with circuit area and power consumption. Experimental results have shown that our framework can generate processor which is 5x smaller than a 5-stage pipeline MIPS processor with 75% less power consumption.  
+		</p>
 		<p><b>Static Program Analysis for Better Speedup</b>
 		</p>
 		<p><b>Fault Tolerable CGRA Architecture</b>
