--- a/cv.html
+++ b/cv.html
@@ -48,7 +48,7 @@
 				Worked on implementing a high-throughput and low power FFT processors on ASIC for wireless communication applications. Different optimization techniques (both architectural and implementation) have been applied to meet the timing and power constraints
 			</p>
 			<h2>Publication</h2>
-			<p>List of publication can be found <a href="/publication.html">here</a></p>
+			<p>List of publication can be found <a href="/publication.html">here</a>.</p>
 			<h2>Service</h2>
 			<h3>Technical Program Committee Member</h3>
 			<ul style="list-style-type:square">
