New paper is added

--- a/publication.html
+++ b/publication.html
@@ -37,6 +37,7 @@
 			</ol>
 			<h3>Conferences (Not-Peer Reviewed)</h3>
 			<ol>
+				<li>K. Zenba, <ins>T. Ahmed</ins>, and Y. Hara-Azumi, "<b>Fast and Simple Netlist-level Fault-Injection Framework on FPGA</b>", <i>IEEE Symposium on Low-Power and High-Speed Chips (COOL CHIPS XIX)</i>, pp. xxx-yyy. Yokohama, Japan, Apr. 2016.</li>
 				<li>N. Sakamoto, <ins>T. Ahmed</ins>, J. Anderson, and Y. Hara-Azumi, "<b>Extension of One-Instruction-Set Computer and Its Evaluation</b>", <i>IEICE Technical Report</i>, Vol. 115, No. 88, VLD2015-11, pp. 19-24, Jun. 2015. <b>(Japanese)</b></li>
 				<li>S. Sugiyama, <ins>T. Ahmed</ins>, and Y. Hara-Azumi, "<b>Implementation and Evaluation of Architecture using Lookup Table for Approximate Computing</b>", <i>IEICE Technical Report</i>, Vol. 114, No. 476, VLD2014-183, pp. 171-176, Mar. 2015. <b>(Japanese)</b></li>
 				<li><ins>T. Ahmed</ins>, J. Yao, and Y. Nakashima, "<b>Achieving Near-Optimial Dependability with Minimal Hardware Costs in an FU Array Processor by Soft Error Rate Monitoring</b>", <i>IIPSJ SIG Notes</i>, 2012-ARC-201(19), pp. 1-6, Aug. 2012.</li>
